# cinnamon

./: .gitignore  README.md  pyproject.toml
scripts/: launch_drop_retrain.sh  launch_eval_all.sh  launch_full_experiment.sh  launch_train_all.sh  launch_train_pope.sh  launch_train_rope.sh  launch_train_rope_yarn.sh  prepare_sft_data.py  setup_b300.sh
src/: attention.py  config.py  eval.py  eval_compare.py  eval_hellaswag.py  eval_niah.py  eval_pg19.py  kernels.py  layers.py  model.py  norm.py  passkey_eval.py  preprocess.py  synthetic_length_eval.py  train.py  train_sft.py
tests/: __init__.py  conftest.py  test_attention.py  test_benchmarks.py  test_kernels.py  test_layers.py  test_model.py  test_norm.py
