[project]
name = "cinnamon"
version = "0.1.0"
description = "DeepSeek V3 from scratch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "numpy",
    "einops",
    "tiktoken",
    "tqdm",
    "wandb",
    "datasets>=4.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cinnamon"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ipython",
]
