[project]
name = "cinnamon"
version = "0.1.0"
description = "DeepSeek V3 from scratch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "numpy",
    "einops",
    "tiktoken",
    "tqdm",
    "wandb",
    "datasets>=4.4.2",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cinnamon"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ipython",
    "matplotlib>=3.10.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "cuda: marks tests as requiring CUDA (deselect with '-m \"not cuda\"')",
    "slow: marks tests as slow running (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as benchmarks (select with '-m benchmark')",
]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
